fixed bizarre whitespace

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -109,13 +109,15 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0;
 }
 
 .header-menu a {
+    font-size: 15px;
     padding: 17.4px 30px;
     text-decoration: none;
     color: var(--inactive-color);
-    /* border-bottom: 2px solid transparent; */
+    border-bottom: 2px solid transparent;
     transition: 0.3s;
 }
 
